--- a/.github/workflows/call-docker-build-result.yaml
+++ b/.github/workflows/call-docker-build-result.yaml
@@ -51,17 +51,17 @@ jobs:
       ### A list of the account/repo names for docker build. List should match what's enabled above
       ### defaults to:
       image-names: |
-        ghcr.io/luizcarloskazuyukifukaya/result
-        luizcarloskazuyukifukaya/result
+        ghcr.io/luizcarloskazuyukifukaya/result:dev
+        luizcarloskazuyukifukaya/result:dev
       
       ### REQUIRED set rules for tagging images, based on special action syntax:
       ### https://github.com/docker/metadata-action#tags-input
       ### defaults to:
-      tag-rules: |
-        type=raw,value=latest,enable=${{ endsWith(github.ref, github.event.repository.default_branch) }}
-        type=raw,value=before,enable=${{ endsWith(github.ref, github.event.repository.default_branch) }}
-        type=raw,value=after,enable=${{ endsWith(github.ref, github.event.repository.default_branch) }}
-        type=ref,event=pr
+      #tag-rules: |
+      #  type=raw,value=latest,enable=${{ endsWith(github.ref, github.event.repository.default_branch) }}
+      #  type=raw,value=before,enable=${{ endsWith(github.ref, github.event.repository.default_branch) }}
+      #  type=raw,value=after,enable=${{ endsWith(github.ref, github.event.repository.default_branch) }}
+      #  type=ref,event=pr
       
       ### path to where docker should copy files into image
       ### defaults to root of repository (.)
@@ -79,4 +79,4 @@ jobs:
       
       ### Create a PR comment with image tags and labels
       ### defaults to false
-      # comment-enable: false
+      comment-enable: true
