--- a/.github/workflows/call-docker-build-result.yaml
+++ b/.github/workflows/call-docker-build-result.yaml
@@ -51,9 +51,9 @@ jobs:
       ### A list of the account/repo names for docker build. List should match what's enabled above
       ### defaults to:
       image-names: |
-        ghcr.io/luizcarloskazuyukifukaya/result:dev
         luizcarloskazuyukifukaya/result:dev
       
+      # ghcr.io/luizcarloskazuyukifukaya/result:dev
       ### REQUIRED set rules for tagging images, based on special action syntax:
       ### https://github.com/docker/metadata-action#tags-input
       ### defaults to:
