--- a/.github/workflows/call-docker-build-vote.yaml
+++ b/.github/workflows/call-docker-build-vote.yaml
@@ -45,23 +45,23 @@ jobs:
       ### tell docker where to push.
       ### NOTE if Docker Hub is set to true, you must set secrets above and also add account/repo/tags below
       dockerhub-enable: true
-      ghcr-enable: true
+      ghcr-enable: false
 
       ### REQUIRED 
       ### A list of the account/repo names for docker build. List should match what's enabled above
       ### defaults to:
       image-names: |
-        ghcr.io/luizcarloskazuyukifukaya/vote:dev
-        luizcarloskazuyukifukaya/vote:dev
+        luizcarloskazuyukifukaya/vote
       
+      #  ghcr.io/luizcarloskazuyukifukaya/vote
       ### REQUIRED set rules for tagging images, based on special action syntax:
       ### https://github.com/docker/metadata-action#tags-input
       ### defaults to:
-      tag-rules: |
-        type=raw,value=latest,enable=${{ endsWith(github.ref, github.event.repository.default_branch) }}
-        type=raw,value=before,enable=${{ endsWith(github.ref, github.event.repository.default_branch) }}
-        type=raw,value=after,enable=${{ endsWith(github.ref, github.event.repository.default_branch) }}
-        type=ref,event=pr
+      # tag-rules: |
+      #  type=raw,value=latest,enable=${{ endsWith(github.ref, github.event.repository.default_branch) }}
+      #  type=raw,value=before,enable=${{ endsWith(github.ref, github.event.repository.default_branch) }}
+      #  type=raw,value=after,enable=${{ endsWith(github.ref, github.event.repository.default_branch) }}
+      #  type=ref,event=pr
       
       ### path to where docker should copy files into image
       ### defaults to root of repository (.)
@@ -75,8 +75,8 @@ jobs:
       
       ### platforms to build for, defaults to linux/amd64
       ### other options: linux/amd64,linux/arm64,linux/arm/v7
-      platforms: linux/amd64,linux/arm64,linux/arm/v7
+      # platforms: linux/amd64,linux/arm64,linux/arm/v7
       
       ### Create a PR comment with image tags and labels
       ### defaults to false
-      # comment-enable: false
+      comment-enable: true
