--- a/.github/workflows/call-docker-build-result.yaml
+++ b/.github/workflows/call-docker-build-result.yaml
@@ -53,7 +53,7 @@ jobs:
       image-names: |
         luizcarloskazuyukifukaya/result
       
-      # ghcr.io/luizcarloskazuyukifukaya/result:dev
+      # ghcr.io/luizcarloskazuyukifukaya/result
       ### REQUIRED set rules for tagging images, based on special action syntax:
       ### https://github.com/docker/metadata-action#tags-input
       ### defaults to:
@@ -62,7 +62,8 @@ jobs:
       #  type=raw,value=before,enable=${{ endsWith(github.ref, github.event.repository.default_branch) }}
       #  type=raw,value=after,enable=${{ endsWith(github.ref, github.event.repository.default_branch) }}
       #  type=ref,event=pr
-      
+      tags: luizcarloskazuyukifukaya/result:dev
+
       ### path to where docker should copy files into image
       ### defaults to root of repository (.)
       context: result
