--- a/.github/workflows/call-docker-build-result.yaml
+++ b/.github/workflows/call-docker-build-result.yaml
@@ -18,7 +18,7 @@ on:
       - 'result/**'
       - '.github/workflows/call-docker-build-result.yaml'
 jobs:
-  build:
+  build result:
     runs-on: ubuntu-latest
     steps:
       -
