--- a/.github/workflows/call-docker-build-vote.yaml
+++ b/.github/workflows/call-docker-build-vote.yaml
@@ -18,7 +18,7 @@ on:
       - 'vote/**'
       - '.github/workflows/call-docker-build-vote.yaml'
 jobs:
-  build:
+  build vote:
     runs-on: ubuntu-latest
     steps:
       -
