--- a/.github/workflows/call-helm-install-app.yaml
+++ b/.github/workflows/call-helm-install-app.yaml
@@ -26,9 +26,10 @@ jobs:
       uses: actions/checkout@master
 
     # Setup gcloud CLI
-    - uses: GoogleCloudPlatform/github-actions/setup-gcloud@v1.1.0
+    - uses: GoogleCloudPlatform/github-actions/setup-gcloud@v1
       with:
-        version: '>= 363.0.0'
+        version: '270.0.0'
+        #version: '>= 363.0.0'
         service_account_email: ${{ secrets.GKE_EMAIL }}
         service_account_key: ${{ secrets.GKE_KEY }}
     
