--- a/.github/workflows/call-helm-install-app.yaml
+++ b/.github/workflows/call-helm-install-app.yaml
@@ -25,13 +25,22 @@ jobs:
     - name: Checkout
       uses: actions/checkout@master
 
-    # Setup gcloud CLI
-    - uses: GoogleCloudPlatform/github-actions/setup-gcloud@v1
+    # https://github.com/google-github-actions/setup-gcloud#Authorization
+    - id: 'auth'
+      uses: 'google-github-actions/auth@v1'
       with:
-        version: '270.0.0'
-        #version: '>= 363.0.0'
-        service_account_email: ${{ secrets.GKE_EMAIL }}
-        service_account_key: ${{ secrets.GKE_KEY }}
+        credentials_json: '${{ secrets.GKE_KEY}}'
+
+    - name: 'Set up Cloud SDK'
+      uses: 'google-github-actions/setup-gcloud@v1'
+
+    # Setup gcloud CLI
+    #- uses: GoogleCloudPlatform/github-actions/setup-gcloud@v1
+    #  with:
+    #    version: '270.0.0'
+    #    #version: '>= 363.0.0'
+    #    service_account_email: ${{ secrets.GKE_EMAIL }}
+    #    service_account_key: ${{ secrets.GKE_KEY }}
     
     # https://github.com/google-github-actions/setup-gcloud
     - name: Use gcloud CLI'
