--- a/.github/workflows/call-helm-install-app.yaml
+++ b/.github/workflows/call-helm-install-app.yaml
@@ -13,7 +13,7 @@ on:
 env:
   GKE_PROJECT: luiz-devops-cicd
   GKE_EMAIL: ${{ secrets.GKE_EMAIL }}
-  GKE_REGION: us-uscentral1
+  GKE_REGION: us-central1
   GKE_CLUSTER: luiz-devops-cicd-k8s
 
 jobs:
@@ -50,7 +50,7 @@ jobs:
     - run: |
         # Set up docker to authenticate
         # via gcloud command-line tool.
-        gcloud auth configure-docker
+        gcloud auth configure-docker -q
 
     # Install helm
     - name: Install Helm
