helm install command updated

--- a/.github/workflows/call-helm-install-app.yaml
+++ b/.github/workflows/call-helm-install-app.yaml
@@ -5,6 +5,11 @@
 name: Build and Deploy to GKE
 
 on:
+  workflow_run:
+    workflows: ["Build Result docker image", "Build Vote docker image", "Build Worker docker image"]
+    branches: [dev]
+    types:
+      - completed
   push:
     branches:
       - 'dev'
@@ -53,7 +58,11 @@ jobs:
     # Install helm
     - name: 'Install Helm'
       run: |
-        curl https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 | bash
+        #curl https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 | bash
+        curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3
+        chmod 700 get_helm.sh
+        ./get_helm.sh
+
     
     # Config GKE cluster to be accessed with kubectl/helm
     - name: 'Set kubernetes context'
