Updated helm chart to use the image released by the dev branch

--- a/helm/templates/result-deployment.yaml
+++ b/helm/templates/result-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       #- image: dockersamples/examplevotingapp_result
-      - image: luizcarloskazuyukifukaya/result
+      - image: luizcarloskazuyukifukaya/result:dev
         name: result
         ports:
         - containerPort: 80
