--- a/.github/workflows/call-docker-build-result.yaml
+++ b/.github/workflows/call-docker-build-result.yaml
@@ -25,6 +25,19 @@ jobs:
         name: Checkout
         uses: actions/checkout@v3
       -
+        name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: |
+            name/app
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=raw,value=preview
+      -
         name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -40,4 +53,5 @@ jobs:
           context: ./result
           file: ./result/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/result:dev
+          tags: ${{ steps.meta.outputs.tags }}
+          #tags: ${{ secrets.DOCKERHUB_USERNAME }}/result:dev
