--- a/.github/workflows/call-docker-build-result.yaml
+++ b/.github/workflows/call-docker-build-result.yaml
@@ -30,7 +30,8 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: |
-            name/app
+            ${{ secrets.DOCKERHUB_USERNAME }}/result
+            # name/app
           tags: |
             type=ref,event=branch
             type=ref,event=pr
