--- a/.github/workflows/call-docker-build-result.yaml
+++ b/.github/workflows/call-docker-build-result.yaml
@@ -18,9 +18,6 @@ on:
       - 'result/**'
       - '.github/workflows/call-docker-build-result.yaml'
 
-env:
-  MODULE_NAME: result
-
 jobs:
   build-result:
     runs-on: ubuntu-latest
@@ -34,7 +31,7 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/$MODULE_NAME
+            ${{ secrets.DOCKERHUB_USERNAME }}/result
             # name/app
           tags: |
             type=ref,event=branch
@@ -55,8 +52,8 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v4
         with:
-          context: ./$MODULE_NAME
-          #file: ./$MODULE_NAME/Dockerfile
+          context: ./result
+          #file: ./result/Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
-          #tags: ${{ secrets.DOCKERHUB_USERNAME }}/$MODULE_NAME:dev
+          #tags: ${{ secrets.DOCKERHUB_USERNAME }}/result:dev
