--- a/.github/workflows/call-docker-build-worker.yaml
+++ b/.github/workflows/call-docker-build-worker.yaml
@@ -17,6 +17,7 @@ on:
     paths:
       - 'worker/**'
       - '.github/workflows/call-docker-build-worker.yaml'
+
 jobs:
   build-worker:
     runs-on: ubuntu-latest
@@ -24,6 +25,20 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v3
+      -
+        name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/worker
+            # name/app
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=raw,value=preview
       -
         name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -38,6 +53,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: ./worker
-          file: ./worker/Dockerfile
+          #file: ./worker/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/worker:dev
+          tags: ${{ steps.meta.outputs.tags }}
+          #tags: ${{ secrets.DOCKERHUB_USERNAME }}/worker:dev
