--- a/.github/workflows/call-helm-install-app.yaml
+++ b/.github/workflows/call-helm-install-app.yaml
@@ -6,7 +6,8 @@ name: Build and Deploy to GKE
 
 on:
   workflow_run:
-    workflows: [Build Result docker image,Build Vote docker image,Build Worker docker image]
+    workflows: [Build Result docker image]
+    #workflows: [Build Result docker image,Build Vote docker image,Build Worker docker image]
     branches: [dev]
     types:
       - completed
