--- a/.github/workflows/call-helm-install-app.yaml
+++ b/.github/workflows/call-helm-install-app.yaml
@@ -2,7 +2,7 @@
 
 # This workflow will build a docker container, publish it to Google Container Registry, and deploy it to GKE when a release is created
 
-name: Build and Deploy to GKE
+name: 'Build and Deploy to GKE'
 
 on:
   workflow_run:
