--- a/helm/templates/worker-deployment.yaml
+++ b/helm/templates/worker-deployment.yaml
@@ -17,4 +17,5 @@ spec:
       containers:
       #- image: dockersamples/examplevotingapp_worker
       - image: luizcarloskazuyukifukaya/worker:dev
+        imagePullPolicy: Always # IMPORTANT to always pull updated image
         name: worker
