--- a/.github/workflows/call-seed-data.yaml
+++ b/.github/workflows/call-seed-data.yaml
@@ -102,7 +102,7 @@ jobs:
       run: |
         echo 'Preparing dummy data for test ...'
         echo 'Install tools for data manupulation ...'
-        sudo pt-get update
+        sudo apt-get update
         sudo apt-get install -y --no-install-recommends apache2-utils
         sudo rm -rf /var/lib/apt/lists/*
         python ./seed-data/make-data.py
