--- a/.github/workflows/call-seed-data.yaml
+++ b/.github/workflows/call-seed-data.yaml
@@ -31,7 +31,7 @@ env:
 
 jobs:
   setup-runner-to-access-k8s:
-    name: Setup Runner
+    name: Seed Data
     runs-on: ubuntu-latest
     steps:
 
