--- a/.github/workflows/call-docker-build-result.yaml
+++ b/.github/workflows/call-docker-build-result.yaml
@@ -39,6 +39,7 @@ jobs:
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=raw,value=preview
+            type=raw
       -
         name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -55,5 +56,5 @@ jobs:
           context: ./result
           #file: ./result/Dockerfile
           push: true
-          #tags: ${{ steps.meta.outputs.tags }}
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/result:dev
+          tags: ${{ steps.meta.outputs.tags }}
+          #tags: ${{ secrets.DOCKERHUB_USERNAME }}/result:dev
