--- a/.github/workflows/call-docker-build-result.yaml
+++ b/.github/workflows/call-docker-build-result.yaml
@@ -39,7 +39,7 @@ jobs:
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=raw,value=preview
-            type=raw
+            type=raw,value=latest
       -
         name: Login to Docker Hub
         uses: docker/login-action@v2
